test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_abstract_array_declarator.plx
pub fn main(none) i32 {
    # invalid abstract declarator syntax: pointer declarator can't follow
    # array size declarator
    return cast<[3]i32*>(0)
}
